fix: alignment of the Add Button

--- a/src/sections/create-dataset/dynamic-fields-buttons/DynamicFieldsButtons.module.scss
+++ b/src/sections/create-dataset/dynamic-fields-buttons/DynamicFieldsButtons.module.scss
@@ -1,6 +1,5 @@
 .container {
   display: flex;
-  margin: 1.8em;
 }
 
 .icon {
